Added walls and added floor texture

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			}
 		</style> 
 	</head>
-	<body>
+	<body style="background:#ccc">
 		<script type="text/javascript" src="js/game.js"></script>
 	</body>
 </html>
