Visibility script added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 		<title>Art gallery JS</title>
 
-	<!--	<script src="libs/spatial_query.js"></script>-->
 		<script type="text/javascript" src="libs/pixi.js"></script>
+		<script type="text/javascript" src="js/util/LineSegment.js"></script>
+		<script type="text/javascript" src="js/util/Ray.js"></script>
 
 		<style>
 			canvas {
