Visibility algorithm improved

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<title>Art gallery JS</title>
 
 		<script type="text/javascript" src="libs/pixi.js"></script>
+		<script type="text/javascript" src="js/util/Point.js"></script>
 		<script type="text/javascript" src="js/util/LineSegment.js"></script>
 		<script type="text/javascript" src="js/util/Ray.js"></script>
 
