Game refactored to work with the new leveleditor levels

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<script type="text/javascript" src="js/util/Point.js"></script>
 		<script type="text/javascript" src="js/util/LineSegment.js"></script>
 		<script type="text/javascript" src="js/util/Ray.js"></script>
-
+		<script type="text/javascript" src="js/Level.js"></script>
+		<script type="text/javascript" src="js/algs/Visibility.js"></script>
 		<style>
 			canvas {
 				display: block;
@@ -23,6 +24,7 @@
 				bottom: 0;
 				left: 0;
 				right: 0;
+
 			}
 		</style> 
 	</head>
