leveleditor updated + Levels

--- a/leveleditor.html
+++ b/leveleditor.html
@@ -13,7 +13,8 @@
 		<script type="text/javascript" src="js/util/Point.js"></script>
 		<script type="text/javascript" src="js/util/LineSegment.js"></script>
 		<script type="text/javascript" src="js/util/Ray.js"></script>
-
+		<script type="text/javascript" src="assets/levels.js"></script>
+		<script type="text/javascript" src="js/Level.js"></script>
 		<style>
 			canvas {
 				display: block;
@@ -40,7 +41,8 @@
 		<input type="button" id="btn_Guardpath" onclick="CreateScene(4);" value="Create Guard path"> <br> <br>
 		<input type="button" id="btn_Player" onclick="CreateScene(5);" value="Create Player"> <br> <br>
 		<input type="button" id="btn_Export" onclick="Export();" value="Export"> <br> <br>
-		<input type="textbox" id="tb_Export" onclick="Export();">
+		<input type="button" id="btn_Import" onclick="Import();" value="Import"> <br> <br>
+		<input type="textbox" id="tb_Export">
 	</body>
 </html>
 
