--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 		<script type="text/javascript" src="js/util/Point.js"></script>
 		<script type="text/javascript" src="js/util/LineSegment.js"></script>
 		<script type="text/javascript" src="js/util/Ray.js"></script>
+
 		<script type="text/javascript" src="js/Level.js"></script>
 		<script type="text/javascript" src="js/algs/Visibility.js"></script>
+		<script type="text/javascript" src="assets/levels.js"></script>
 		<style>
 			canvas {
 				display: block;
