--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 		<script type="text/javascript" src="js/Level.js"></script>
 		<script type="text/javascript" src="js/algs/Visibility.js"></script>
+		<script type="text/javascript" src="js/input.js"></script>
 		<script type="text/javascript" src="assets/levels.js"></script>
 		<style>
 			canvas {
