Player movement fix(Vector)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script type="text/javascript" src="js/Level.js"></script>
 		<script type="text/javascript" src="js/algs/Visibility.js"></script>
 		<script type="text/javascript" src="js/input.js"></script>
+		<script type="text/javascript" src="js/vector.js"></script>
 		<script type="text/javascript" src="assets/levels.js"></script>
 		<style>
 			canvas {
