Guards are now drawn more efficiently, floor and wall textures improved

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			}
 		</style> 
 	</head>
-	<body style="background:#ccc">
+	<body style="background:#999">
 		<script type="text/javascript" src="js/game.js"></script>
 	</body>
 </html>
