--- a/leveleditor.html
+++ b/leveleditor.html
@@ -44,10 +44,11 @@
 		<input type="button" id="btn_Holes" onclick="CreateScene(2);" value="Add Hole"></input> <br> <br>
 		<input type="button" id="btn_Obstacle" onclick="CreateScene(3);" value="Create Obstacle"></input> <br> <br>
 		<input type="button" id="btn_Cover" onclick="CreateScene(4);" value="Create Covers"></input> <br> <br>
-		<input type="button" id="btn_Guards" onclick="CreateScene(5);" value="Create Guards"></input> <br> <br>
-		<input type="button" id="btn_Guardpath" onclick="CreateScene(6);" value="Create Guard path"></input> <br> <br>
-		<input type="button" id="btn_Player" onclick="CreateScene(7);" value="Create Player"></input> <br> <br>
-		<input type="button" id="btn_Painting" onclick="CreateScene(8);" value="Create Painting"></input>
+		<input type="button" id="btn_Spawn" onclick="CreateScene(5);" value="Create SpawnPoint"></input> <br> <br>
+		<input type="button" id="btn_Guards" onclick="CreateScene(6);" value="Create Guards"></input> <br> <br>
+		<input type="button" id="btn_Guardpath" onclick="CreateScene(7);" value="Create Guard path"></input> <br> <br>
+		<input type="button" id="btn_Player" onclick="CreateScene(8);" value="Create Player"></input> <br> <br>
+		<input type="button" id="btn_Painting" onclick="CreateScene(9);" value="Create Painting"></input>
 		<input type="radio" name="rad_paintingvalue" id="rad_Painting_Low" checked text="Low">L</input>
 		<input type="radio" name="rad_paintingvalue" id="rad_Painting_Medium" text="Medium">M</input>
 		<input type="radio" name="rad_paintingvalue" id="rad_Painting_High" value="High">H</input><br> <br>
