Start / Finish zones are now drawn, menu classes added

--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 
 		<title>Art gallery JS</title>
 
+		<!-- PIXIjs library for rendering to webgl/canvas -->
 		<script type="text/javascript" src="libs/pixi.js"></script>
+
+		<!-- Utility types -->
 		<script type="text/javascript" src="js/util/Point.js"></script>
 		<script type="text/javascript" src="js/util/LineSegment.js"></script>
 		<script type="text/javascript" src="js/util/Ray.js"></script>
+		<script type="text/javascript" src="js/util/Vector.js"></script>
+
+		<!-- Menu scripts -->
+		<script type="text/javascript" src="js/menus/pausemenu.js"></script>
+		<script type="text/javascript" src="js/menus/gameovermenu.js"></script>
+		<script type="text/javascript" src="js/menus/helpmenu.js"></script>
+		<script type="text/javascript" src="js/menumanager.js"></script>
+
 
 		<script type="text/javascript" src="js/Level.js"></script>
+		
+		<!-- Visibility algorithm -->
 		<script type="text/javascript" src="js/algs/Visibility.js"></script>
 		<script type="text/javascript" src="js/input.js"></script>
-		<script type="text/javascript" src="js/vector.js"></script>
+		
 		<script type="text/javascript" src="assets/levels.js"></script>
 		<style>
 			canvas {
