--- a/index.html
+++ b/index.html
@@ -41,12 +41,33 @@
 				bottom: 0;
 				left: 0;
 				right: 0;
-
+/*				background-color: #fff;
+				width: 100%;*/
+			}
+			html
+			{
+				height: 100%;
+			}
+			body
+			{
+				height: 100%;
+				background: rgb(125,125,125); /* Old browsers */
+				background: -moz-radial-gradient(ellipse at center, rgb(255, 255, 255) 0%,rgb(125, 125, 125) 100%); /* FF3.6+ */
+				background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgb(255, 255, 255)), color-stop(100%,rgba(125,125,125,1))); /* Chrome,Safari4+ */
+				background: -webkit-radial-gradient(ellipse at center, rgb(255, 255, 255) 0%,rgb(125, 125, 125) 100%); /* Chrome10+,Safari5.1+ */
+				background: -o-radial-gradient(ellipse at center, rgb(255, 255, 255) 0%,rgb(125, 125, 125) 100%); /* Opera 12+ */
+				background: -ms-radial-gradient(ellipse at center, rgb(255, 255, 255) 0%,rgb(125, 125, 125) 100%); /* IE10+ */
+			    /*background: radial-gradient(ellipse at center, rgb(154,194,224) 0%,rgb(44,55,74) 100%);*/
+			/*    background: radial-gradient(ellipse at center, rgb(154, 224, 179) 0%,rgb(44, 64, 74) 100%);*/
+				background: radial-gradient(ellipse at center, rgb(255, 255, 255) 0%,rgb(125, 125, 125) 100%);
 			}
 		</style> 
 	</head>
-	<body style="background:#999999">
+	<body>
+	<div class="gradientHolder">
+
 		<script type="text/javascript" src="js/game.js"></script>
+		</div>
 	</body>
 </html>
 
