--- a/leveleditor.html
+++ b/leveleditor.html
@@ -40,7 +40,7 @@
 	</head>
 	<body style="background:#ccc">
 		<script type="text/javascript" src="js/leveleditor.js"></script>
-		/<input type="button" id="btn_gallery" onclick="CreateScene(1);" value="Create Gallery"></input> <br> <br>
+		<input type="button" id="btn_gallery" onclick="CreateScene(1);" value="Create Gallery"></input> <br> <br>
 		<input type="button" id="btn_Holes" onclick="CreateScene(2);" value="Add Hole"></input> <br> <br>
 		<input type="button" id="btn_Obstacle" onclick="CreateScene(3);" value="Create Obstacle"></input> <br> <br>
 		<input type="button" id="btn_Cover" onclick="CreateScene(4);" value="Create Covers"></input> <br> <br>
@@ -54,7 +54,8 @@
 		<input type="radio" name="rad_paintingvalue" id="rad_Painting_High" value="High">H</input><br> <br>
 		<input type="button" id="btn_Export" onclick="Export();" value="Export"></input> <br> <br>
 		<input type="button" id="btn_Import" onclick="Import();" value="Import"></input> <br> <br>
-		<input type="textbox" id="tb_Export">
+		<input type="textbox" id="tb_Export"> <br> <br>
+		<input type="button" id="btn_Game" onclick="GoToGame();" value="Go to game"></input> <br> <br>
 	</body>
 </html>
 
