Image paths fixed for local file access, Mongoose binary added as an alternative webserver

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 		<title>Art gallery JS</title>
 
 		<!-- PIXIjs library for rendering to webgl/canvas -->
+		<!-- http://www.pixijs.com/ -->
 		<script type="text/javascript" src="libs/pixi.js"></script>
+
+		<!-- buckets library which holds implementations of simple data structures, we will be using the heap -->
+		<!-- https://github.com/mauriciosantos/Buckets-JS -->
+		<script type="text/javascript" src="libs/buckets.js"></script>
 
 		<!-- Utility types -->
 		<script type="text/javascript" src="js/util/Point.js"></script>
