--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script type="text/javascript" src="libs/buckets.js"></script>
 
 		<!-- Utility types -->
+		<script type="text/javascript" src="libs/MultiStyleText.js"></script>
 		<script type="text/javascript" src="js/util/Point.js"></script>
 		<script type="text/javascript" src="js/util/LineSegment.js"></script>
 		<script type="text/javascript" src="js/util/Ray.js"></script>
